2008-10-23  Alejandro Pinheiro  <apinheiro@igalia.com>

	* debian/control: Added new package libhildon1-examples, in order to pack
	the current hildon examples as documentation
	* debian/rules: Not to compress .c files, modify some includes on the
	examples (as normally are compiled locally, but when installed it will
	require to include the installed libhildon1 library), and rename
	Makefile.static
	* examples/Makefile.am: Added examplesdir and examples_DATA, in order to
	install all the example files on the new example package
	* examples/Makefile.static: Added static makefile that can be used to
	compile the examples, once installed the new example package
	* examples: Most of the examples were modified in order to grant that
	all use only '#include "hildon.h"', in order to be easy to prepare
	it on the example package

2008-10-23  Alberto Garcia  <agarcia@igalia.com>

	* debian/control
	* debian/libhildon1-dev.install
	* debian/libhildon1-doc.install:
	Move all gtk-doc files to a separate libhildon1-doc package.

2008-10-23  Daniel Borgmann  <danielb@openismus.com>

	reviewed by:  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-gtk.c (hildon_gtk_menu_new): Change capitalization

2008-10-22  Alejandro Pinheiro  <apinheiro@igalia.com>

	* debian/rules: Fixed a error in order to avoid unnecessary calls
	to autogen.sh on package building

2008-10-22  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-app-menu-example.c: Add keyboard accelerator.

2008-10-21  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.h: Add missing HildonTouchSelector
	header include.

2008-10-21  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-picker-button.c
	(hildon_picker_button_finalize):
	Free priv->done_button_text

	* src/hildon-time-button.c
	(hildon_time_button_set_time)
	* src/hildon-picker-button.c
	(hildon_picker_button_clicked)
	(hildon_picker_button_selector_selection_changed)
	(hildon_picker_button_set_selector)